--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!my-library-dir)/'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "react-bootstrap-icons": "^1.10.2",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.58.3",
     "tailwindcss": "^3.2.7"
   }
